--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <title>30 Days Of React App</title>
+    <title>HexaColor App</title>
   </head>
   <body>
     <div id="root"></div>
